<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageFilm"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"

        app:layout_constraintBottom_toTopOf="@+id/buyView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/imageFilm"
        app:layout_constraintLeft_toLeftOf="@+id/imageFilm"
        app:layout_constraintRight_toRightOf="@+id/imageFilm"
        app:layout_constraintBottom_toBottomOf="@+id/imageFilm">

    </FrameLayout>

    <TextView
        android:id="@+id/filmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/imageFilm"
        app:layout_constraintTop_toTopOf="@id/imageFilm"
        app:layout_constraintBottom_toBottomOf="@id/imageFilm"
        app:layout_constraintRight_toRightOf="@id/imageFilm"
        android:layout_margin="1dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:gravity="center"
        android:text="123"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/filmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_margin="2dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="@id/imageFilm"
        app:layout_constraintRight_toRightOf="@id/imageFilm"
        app:layout_constraintTop_toBottomOf="@id/filmName"/>

    <View
        android:id="@+id/buyView"
        android:layout_width="300dp"
        android:layout_height="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="#4E4D4D"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/screen"/>

    <TextView
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen"
        android:paddingBottom="30dp"
        android:paddingTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/seatsFilm"/>

    <GridView
        android:id="@+id/seatsFilm"
        android:layout_width="186dp"
        android:layout_height="200dp"
        android:columnWidth="40dp"
        android:horizontalSpacing="15dp"
        android:verticalSpacing="12dp"
        android:gravity="center"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        app:layout_constraintBottom_toTopOf="@id/seatsInfo2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </GridView>
        <TextView
            android:id="@+id/priceFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/seatsFilm"
            app:layout_constraintTop_toBottomOf="@id/screen"
            android:layout_marginTop="60dp"
            android:textAlignment="center"
            android:layout_marginLeft="30dp"
            android:text="@string/sum_ticket"
            />

    <TextView
        android:id="@+id/seatsInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:drawableLeft="@drawable/ic_cirlce"
        android:drawableTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/buyButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/seatsInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/available"
        android:drawableLeft="@drawable/ic_cirlce"
        android:drawableTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/buyButton"
        app:layout_constraintRight_toLeftOf="@+id/seatsInfo2"/>

    <TextView
        android:id="@+id/seatsInfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginStart="40dp"
        android:text="@string/sold"
        android:drawableLeft="@drawable/ic_cirlce"
        android:drawableTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/buyButton"
        app:layout_constraintLeft_toRightOf="@+id/seatsInfo2"/>

    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>